tests/ui/str_dyn.stderr
error[E0599]: no method named `coerce_unsized` found for reference `&'static str` in the current scope
  --> tests/ui/str_dyn.rs:16:28
   |
16 |     let s: &dyn Trait = "".coerce_unsized();
   |                            ^^^^^^^^^^^^^^ method not found in `&str`
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
   |
3  | use unsizing_experiments::coerce_unsized::CoerceUnsized;
   |
